bubba-frontend (1.9.27) claire; urgency=low

  * use flashdata for auth data
  * make "m" menu work in webkit
  * rewrite iCheckbox to use pubsub for message passing 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 30 Mar 2010 14:13:33 +0200

bubba-frontend (1.9.26) claire; urgency=low

  [ Carl Fürstenberg ]
  * fixed bug in iCheckbox which really fnucked up it all 
  * change animation of sideboard to work as well in safari 
  * force music to be opened in it's own window 

  [ Tor Krill ]
  * Fix character encoding in filename in download and download as zip 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 29 Mar 2010 17:18:28 +0200

bubba-frontend (1.9.25) claire; urgency=low

  * reanimate the menu
  * fix disk mount button width
  * remove state from printing
  * make yellow field not jump in filemanager


 -- Carl Fürstenberg <carl@excito.com>  Fri, 26 Mar 2010 17:37:05 +0100

bubba-frontend (1.9.24) claire; urgency=low

  * Bump version to. (Forgott that) 

 -- Tor Krill <tor@excito.com>  Fri, 26 Mar 2010 07:56:27 +0100

bubba-frontend (1.9.23) claire; urgency=low

  [ Carl Fürstenberg ]
  * remove the lonesome alert in the old backup add dir dialog 

  [ Tor Krill ]
  * Rework permissions dialog

 -- Tor Krill <tor@excito.com>  Thu, 25 Mar 2010 23:10:20 +0100

bubba-frontend (1.9.22) claire; urgency=low

  * make download as zip remember what directory it's in 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 25 Mar 2010 17:57:22 +0100

bubba-frontend (1.9.21) claire; urgency=low

  *  set browser class
  * remake main layout as table to get sidebar better placement 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 25 Mar 2010 17:30:27 +0100

bubba-frontend (1.9.20.1) claire; urgency=low

  * test 96% error 

 -- Carl Fürstenberg <carl@excito.com>  Wed, 24 Mar 2010 18:22:45 +0100

bubba-frontend (1.9.19) claire; urgency=low

  * add throbber
  * bugfixes
  * testbuild

 -- Carl Fürstenberg <carl@excito.com>  Wed, 24 Mar 2010 18:01:43 +0100
