@@ -3,8 +3,9 @@ bubba-frontend (1.9.27) claire; urgency=low
   * use flashdata for auth data
   * make "m" menu work in webkit
   * rewrite iCheckbox to use pubsub for message passing 
+  * fix failed login in chrome 
 
- -- Carl Fürstenberg <carl@excito.com>  Tue, 30 Mar 2010 14:13:33 +0200
+ -- Carl Fürstenberg <carl@excito.com>  Tue, 30 Mar 2010 17:07:03 +0200
 
 bubba-frontend (1.9.26) claire; urgency=low
 
